tests/conformance/invalid/duplicate_identifier.svp
-- duplicate_identifier.svp — redeclaración en el mismo ámbito

codomain K3 = { APTO, NO_APTO, INDETERMINADO };
codomain K3 = { SI, NO, TAL_VEZ };
